--- a/_examples/api.ws/api.ws.prd.toml
+++ b/_examples/api.ws/api.ws.prd.toml
@@ -2,7 +2,7 @@
 version               ="_prd_v1.1.1"
 
 [etcdv3]
-endpoints             =["172.26.15.210:2379"]
+endpoints             =[":2379"]
 
 [redis]
 addr                  =[""]
